[gd_scene load_steps=3 format=2]

[ext_resource path="res://default.theme" type="Theme" id=1]
[ext_resource path="res://DeveloperSetup.gd" type="Script" id=2]

[node name="DeveloperSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -388.892
margin_top = -259.0
margin_right = 397.108
margin_bottom = 249.0
rect_min_size = Vector2( 786, 508 )
rect_clip_content = true
__meta__ = {
"_edit_lock_": true
}

[node name="Welcome" type="Control" parent="Panel"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -40.0
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="Label" parent="Panel/Welcome"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -93.5
margin_top = 9.97229
margin_right = 93.5
margin_bottom = 23.9723
text = "Welcome Brave Developer"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Panel/Welcome"]
anchor_right = 1.0
margin_top = 39.0
margin_bottom = 45.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Welcome"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -378.0
margin_top = -95.0
margin_right = 379.0
margin_bottom = 95.0
bbcode_enabled = true
bbcode_text = "Greetings, 

This wizard will help you setup your developer account on OpenSeed. The process will require several minutes to complete and for the most part optional and can be edited at anytime after the creation of the account.

In order to publish content for OpenSeed / Thicket you need to have a valid STEEM account. It is recomended that you have a seperate account setup for your Development profile to ensure that in the case of identity theft your main account stays intact. 

We recommend using Steem Ninja to create new STEEM Accounts [url=https://steem.ninja/]Steem Ninja[/url] 

"
text = "Greetings, 

This wizard will help you setup your developer account on OpenSeed. The process will require several minutes to complete and for the most part optional and can be edited at anytime after the creation of the account.

In order to publish content for OpenSeed / Thicket you need to have a valid STEEM account. It is recomended that you have a seperate account setup for your Development profile to ensure that in the case of identity theft your main account stays intact. 

We recommend using Steem Ninja to create new STEEM Accounts Steem Ninja 

"

[node name="General" type="Control" parent="Panel"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -40.0
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="Label" parent="Panel/General"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.5
margin_top = 15.5125
margin_right = 47.5
margin_bottom = 29.5125
text = "General Info"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Panel/General"]
anchor_right = 1.0
margin_top = 39.0
margin_bottom = 45.0

[node name="companyName" type="LineEdit" parent="Panel/General"]
editor/display_folded = true
margin_left = 121.864
margin_top = 83.2687
margin_right = 406.864
margin_bottom = 107.269
max_length = 64

[node name="Label" type="Label" parent="Panel/General/companyName"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -7.0
margin_right = -5.0
margin_bottom = 7.0
text = "Company Name:"

[node name="primaryContact" type="LineEdit" parent="Panel/General"]
editor/display_folded = true
margin_left = 122.0
margin_top = 118.0
margin_right = 384.0
margin_bottom = 142.0
max_length = 64

[node name="Label" type="Label" parent="Panel/General/primaryContact"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -7.0
margin_right = -5.0
margin_bottom = 7.0
text = "Contact Name:"

[node name="primaryContact2" type="LineEdit" parent="Panel/General"]
editor/display_folded = true
margin_left = 496.0
margin_top = 117.0
margin_right = 771.0
margin_bottom = 141.0
max_length = 64

[node name="Label" type="Label" parent="Panel/General/primaryContact2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -105.673
margin_top = -5.89197
margin_right = -4.6731
margin_bottom = 8.10803
text = "Steem Account:"
align = 2

[node name="email" type="LineEdit" parent="Panel/General"]
editor/display_folded = true
margin_left = 121.864
margin_top = 152.269
margin_right = 406.864
margin_bottom = 176.269
max_length = 64

[node name="Label" type="Label" parent="Panel/General/email"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -7.0
margin_right = -5.0
margin_bottom = 7.0
text = "Primary Email:"

[node name="email2" type="LineEdit" parent="Panel/General"]
margin_left = 486.892
margin_top = 152.269
margin_right = 771.892
margin_bottom = 176.269
max_length = 64

[node name="Label" type="Label" parent="Panel/General/email2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = -7.0
margin_right = -5.0
margin_bottom = 7.0
text = "Posting Key:"
align = 2

[node name="aboutText" type="TextEdit" parent="Panel/General"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 206.0
margin_right = -16.0
margin_bottom = -8.0

[node name="Label" type="Label" parent="Panel/General"]
margin_left = 13.2964
margin_top = 187.258
margin_right = 53.2964
margin_bottom = 201.258
text = "About:"

[node name="Files" type="Control" parent="Panel"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.80496
margin_bottom = -43.195
__meta__ = {
"_edit_lock_": true
}

[node name="title2" type="Label" parent="Panel/Files"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -41.5
margin_top = 14.0
margin_right = 41.5
margin_bottom = 28.0
text = "Look & Feel"
uppercase = true

[node name="HSeparator2" type="HSeparator" parent="Panel/Files"]
anchor_right = 1.0
margin_top = 39.0
margin_bottom = 45.0

[node name="Banner" type="TextureButton" parent="Panel/Files"]
editor/display_folded = true
anchor_right = 1.0
margin_left = 14.0
margin_top = 70.0
margin_right = -14.0
margin_bottom = 185.0
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/Files/Banner"]
margin_left = -0.703613
margin_top = -17.1108
margin_right = 48.2964
margin_bottom = -3.11078
text = "Banner:"

[node name="Banner2" type="TextureButton" parent="Panel/Files"]
anchor_right = 1.0
margin_left = 11.39
margin_top = 229.707
margin_right = -642.61
margin_bottom = 350.707
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/Files/Banner2"]
margin_left = -1.0
margin_top = -17.0
margin_right = 48.0
margin_bottom = -3.0
text = "Avatar:"

[node name="nextButton" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -75.108
margin_top = -39.0
margin_right = -8.10803
margin_bottom = -6.10803
text = "Next"

[node name="backButton" type="Button" parent="Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.89197
margin_top = -39.0
margin_right = 76.892
margin_bottom = -6.0
text = "Back"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 347.503
margin_top = 74.5717
margin_right = 696.503
margin_bottom = 475.572
theme = ExtResource( 1 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/mnt/extended/Games/Grove"
current_path = "/mnt/extended/Games/Grove/"
[connection signal="pressed" from="Panel/Files/Banner" to="." method="_on_Banner_pressed"]
[connection signal="pressed" from="Panel/Files/Banner2" to="." method="_on_Banner_pressed"]
[connection signal="pressed" from="Panel/nextButton" to="." method="_on_nextButton_pressed"]
[connection signal="pressed" from="Panel/backButton" to="." method="_on_backButton_pressed"]
